--- a/404.html
+++ b/404.html
@@ -10,6 +10,19 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+       margin-left: 20%;
+        padding: 50px;
+        background: url('https://i.pinimg.com/originals/31/0d/97/310d97b7c222c87bebdf6ee8f025682e.gif') center/cover fixed;
+        animation: animacaoFundo 20s infinite linear;
+        }
+        @keyframes animacaoFundo {
+            0% {
+                background-position: 0 0;
+            }
+            100% {
+                background-position: 100% 100%;
+            }
+        }
     }
     p{
         text-align: justify;
@@ -74,6 +87,16 @@
     <p>
         Obrigado por tudo e tanto, sempre estarei ao seu lado e te amarei ! Você é tudo para mim, a gente sempre e pra tudo!
     </p>
+  </main>
+    <main class="fotos">
+    <img src="nos-1.jpeg" alt="fotos-de-casal">
+    <img src="nos-2.jpeg" alt="fotos-de-casal">
+    <img src="nos-3.jpeg" alt="fotos-de-casal">
+    <img src="nos-4.jpeg" alt="fotos-de-casal">
+    <img src="nos-5.jpeg" alt="fotos-de-casal">
+    <img src="nos-6.jpeg" alt="fotos-de-casal">
+    <img src="nos-7.jpeg" alt="fotos-de-casal">
+    <img src="nos-8.jpeg" alt="fotos-de-casal">
   </main>
 </body>
 </html>
